# playperfect

./: .gitignore  README.md  commands.md  pyproject.toml  useful_commands.md
api_layer/: fufu_test_api.py  get_user_attribute_spanner.py  get_user_attribute_spanner_function.py  main.py  requirements.txt  test_api.py
api_layer/load_test/: README.md  locustfile.py  player_ids.csv  requirements.txt  run.sh
data_manager/: download_spanner_data.py  fufu_test_spanner.py  requirements.txt  test_data_manager.py  update_tables_function.py
migration_manager/: migrat_chunk_function.py  migrate_chunk_function.py  migration_manager_function.py  requirements.txt
pipeline/: main.py  user_panel.sql
